# NetDisk-Monitor

./: .gitignore  README.md  index.html  meter.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  meter.css  meter.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: collector.rs  lib.rs  main.rs  metrics.rs  taskbar.rs
src/lib/: format.test.ts  format.ts  overlay-layout.test.ts  overlay-layout.ts  overlay-settings.test.ts  overlay-settings.ts  sparkline.test.ts  sparkline.ts  taskbar-layout.test.ts  taskbar-layout.ts
