[package]
name = "netdisk-monitor"
version = "0.1.0"
edition = "2021"

[lib]
name = "netdisk_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "netdisk-monitor"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = []
desktop = ["dep:tauri", "dep:tauri-plugin-opener"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
sysinfo = "0.33"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_UI_WindowsAndMessaging"] }
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }


[lints.clippy]
all = "warn"
pedantic = "warn"
